--- a/Pre-Processing/Tempo + Beat Detection.ipynb
+++ b/Pre-Processing/Tempo + Beat Detection.ipynb
@@ -20,13 +20,129 @@
     "arr = np.ones(93)\n",
     "arr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import librosa\n",
+    "import librosa.display\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load audio (mono for simplicity)\n",
+    "filename = \"../Songs/rufus_du_sol--innerbloom.mp3\"  # replace with path\n",
+    "y, sr = librosa.load(filename, sr=None)\n",
+    "\n",
+    "# Tempo & beat tracking\n",
+    "tempo, beat_frames = librosa.beat.beat_track(y=y, sr=sr)\n",
+    "beat_times = librosa.frames_to_time(beat_frames, sr=sr)\n",
+    "\n",
+    "print(f\"Estimated tempo: {tempo:.2f} BPM\")\n",
+    "print(\"Beat times (s):\", beat_times[:20], \"...\")\n",
+    "\n",
+    "# Visualization\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "librosa.display.waveshow(y, sr=sr, alpha=0.6)\n",
+    "plt.vlines(beat_times, -1, 1, color='r', alpha=0.8, linestyle='--', label='Beats')\n",
+    "plt.title(f\"Waveform with Detected Beats (Tempo: {tempo:.1f} BPM)\")\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tempo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beat_frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (ml-audio)",
    "language": "python",
-   "name": "python3"
+   "name": "ml-audio"
   },
   "language_info": {
    "codemirror_mode": {
@@ -38,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
