audio debug reveals onset detection might not be ideal

--- a/Pre-Processing/Tempo + Beat Detection.ipynb
+++ b/Pre-Processing/Tempo + Beat Detection.ipynb
@@ -10,7 +10,8 @@
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import soundfile as sf"
    ]
   },
   {
@@ -38,7 +39,8 @@
    "source": [
     "# Load audio (mono for simplicity)\n",
     "# filename = \"../Songs/rufus_du_sol--innerbloom.mp3\"\n",
-    "filename = \"../Songs/omah_lay--holy_ghost.mp3\"\n",
+    "# filename = \"../Songs/omah_lay--holy_ghost.mp3\"\n",
+    "filename = \"../Songs/tool--ticks_and_leaches.mp3\"\n",
     "y, sr = librosa.load(filename, sr=None)\n",
     "\n",
     "# Tempo & beat tracking\n",
@@ -165,9 +167,105 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "# Add Metronome (detected) to Soundtrack"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def overlay_clicks(y, sr, beat_times, click_path=\"./perc.wav\", out_path=None):\n",
+    "    \"\"\"\n",
+    "    Overlay a click sound at detected beat times for subjective beat alignment checking.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    y : np.ndarray\n",
+    "        Original audio signal (mono).\n",
+    "    sr : int\n",
+    "        Sample rate of the audio.\n",
+    "    beat_times : np.ndarray\n",
+    "        Array of beat times in seconds.\n",
+    "    click_path : str\n",
+    "        Path to a short click/percussion .wav file.\n",
+    "    out_path : str or None\n",
+    "        If provided, saves the output audio to this path.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    y_out : np.ndarray\n",
+    "        Audio with clicks overlayed.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Load click sound\n",
+    "    click, sr_click = librosa.load(click_path, sr=sr, mono=True)  # resample to match target sr\n",
+    "    click_gain = 2\n",
+    "    click *= click_gain\n",
+    "    \n",
+    "    y_out = np.copy(y)\n",
+    "\n",
+    "    for t in beat_times:\n",
+    "        start_sample = int(t * sr)\n",
+    "        end_sample = start_sample + len(click)\n",
+    "\n",
+    "        if start_sample >= len(y_out):\n",
+    "            continue\n",
+    "\n",
+    "        # Trim click if it would go past the end\n",
+    "        if end_sample > len(y_out):\n",
+    "            click_segment = click[: len(y_out) - start_sample]\n",
+    "        else:\n",
+    "            click_segment = click\n",
+    "\n",
+    "        # Mix click into signal (with clipping protection)\n",
+    "        y_out[start_sample:start_sample + len(click_segment)] += click_segment\n",
+    "\n",
+    "    # Normalize to prevent clipping\n",
+    "    max_val = np.max(np.abs(y_out))\n",
+    "    if max_val > 1.0:\n",
+    "        y_out = y_out / max_val\n",
+    "\n",
+    "    # Save if requested\n",
+    "    if out_path is not None:\n",
+    "        sf.write(out_path, y_out, sr)\n",
+    "\n",
+    "    return y_out\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Overlay clicks\n",
+    "y_debug = overlay_clicks(y, sr, beat_times, click_path=\"./perc_high.wav\", out_path=\"debug_with_clicks.wav\")\n",
+    "\n",
+    "print(\"Debug audio with clicks saved to debug_with_clicks.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": []
