created new environment for madmom usage

--- a/Pre-Processing/Tempo + Beat Detection.ipynb
+++ b/Pre-Processing/Tempo + Beat Detection.ipynb
@@ -23,8 +23,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
    "metadata": {},
    "source": [
     "# Detect Beats + Tempo w/ Librosa"
@@ -33,14 +41,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load audio (mono for simplicity)\n",
     "# filename = \"../Songs/rufus_du_sol--innerbloom.mp3\"\n",
     "# filename = \"../Songs/omah_lay--holy_ghost.mp3\"\n",
-    "filename = \"../Songs/tool--ticks_and_leaches.mp3\"\n",
+    "# filename = \"../Songs/tool--ticks_and_leaches.mp3\"\n",
+    "filename = \"../Songs/bob_marley--redemption_song.mp3\"\n",
     "y, sr = librosa.load(filename, sr=None)\n",
     "\n",
     "# Tempo & beat tracking\n",
@@ -55,14 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "source": [
     "# Visualize Beat Detection"
@@ -71,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8",
    "metadata": {},
    "outputs": [],
@@ -167,8 +168,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
    "metadata": {},
    "source": [
     "# Add Metronome (detected) to Soundtrack"
@@ -177,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,14 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "13",
    "metadata": {},
    "outputs": [],
@@ -269,13 +270,128 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import madmom\n",
+    "\n",
+    "# Load audio\n",
+    "filename = \"../Songs/bob_marley--redemption_song.mp3\"\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Beat + Downbeat tracking\n",
+    "# -------------------------------\n",
+    "\n",
+    "# Process with madmom's RNN downbeat processor\n",
+    "proc = madmom.features.downbeats.RNNDownBeatProcessor()(filename)\n",
+    "\n",
+    "# Decode with a DBN to get sequences of [beat, downbeat]\n",
+    "beats = madmom.features.downbeats.DBNDownBeatTrackingProcessor(beats_per_bar=[3, 4],\n",
+    "                                                               fps=100)(proc)\n",
+    "\n",
+    "# beats is an array of shape (N, 2):\n",
+    "#   [:,0] = time (s)\n",
+    "#   [:,1] = 1 if downbeat, 0 if beat\n",
+    "\n",
+    "# Extract beat times and downbeat times\n",
+    "beat_times = beats[:,0]\n",
+    "downbeat_times = beats[beats[:,1] == 1, 0]\n",
+    "\n",
+    "# Estimate tempo from inter-beat intervals\n",
+    "if len(beat_times) > 1:\n",
+    "    ib_intervals = np.diff(beat_times)\n",
+    "    tempo = 60.0 / np.median(ib_intervals)\n",
+    "else:\n",
+    "    tempo = float('nan')\n",
+    "\n",
+    "print(f\"Estimated tempo: {tempo:.2f} BPM\")\n",
+    "print(\"First 20 beats (s):\", beat_times[:20])\n",
+    "print(\"First 10 downbeats (s):\", downbeat_times[:10])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ml-audio)",
+   "display_name": "Python (ml_audio)",
    "language": "python",
-   "name": "ml-audio"
+   "name": "ml_audio"
   },
   "language_info": {
    "codemirror_mode": {
@@ -287,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
