verify spectrogram creation with PIL library

--- a/Pre-Processing/Audio_to_Image.ipynb
+++ b/Pre-Processing/Audio_to_Image.ipynb
@@ -11,6 +11,7 @@
     "import soundfile as sf\n",
     "import librosa\n",
     "import madmom\n",
+    "from PIL import Image\n",
     "print(pyrb.__version__)"
    ]
   },
@@ -185,7 +186,7 @@
     "# Example usage:\n",
     "# y, sr = librosa.load(\"song.wav\", sr=None)\n",
     "# downbeat_times = [0.0, 1.0, 2.0, 3.0, 4.0]  # dummy\n",
-    "imgs = make_downbeat_aligned_images(y, sr, downbeat_times, time_bins_per_downbeat=32, downbeats_in_image=4)\n",
+    "imgs = make_downbeat_aligned_images(y, sr, downbeat_times, time_bins_per_downbeat=128, downbeats_in_image=1)\n",
     "print(len(imgs), imgs[0].shape)  # -> (N, (128, 128))\n"
    ]
   },
@@ -195,7 +196,16 @@
    "id": "12",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr = imgs[27]\n",
+    "\n",
+    "# If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
+    "if np.issubdtype(arr.dtype, np.floating):\n",
+    "    arr = (255 * (arr - arr.min()) / (arr.max() - arr.min())).astype(np.uint8)\n",
+    "\n",
+    "pil_img = Image.fromarray(arr)\n",
+    "pil_img"
+   ]
   },
   {
    "cell_type": "code",
@@ -203,14 +213,41 @@
    "id": "13",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "for i, arr in enumerate(imgs):\n",
+    "    # If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
+    "    if np.issubdtype(arr.dtype, np.floating):\n",
+    "        arr = (255 * (arr - arr.min()) / (arr.max() - arr.min())).astype(np.uint8)\n",
+    "    \n",
+    "    pil_img = Image.fromarray(arr)\n",
+    "    pil_img.save(f\"../Results/spectrogram_{i}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, x in enumerate([4, 5, 6]):\n",
+    "    print(i, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (test_env)",
+   "display_name": "Python (process_audio)",
    "language": "python",
-   "name": "test_env"
+   "name": "process_audio"
   },
   "language_info": {
    "codemirror_mode": {
