spectrogram and chromagram based on time segment length

--- a/Pre-Processing/Audio_to_Image.ipynb
+++ b/Pre-Processing/Audio_to_Image.ipynb
@@ -107,8 +107,136 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
    "metadata": {},
    "source": [
     "# Make Beat-aligned Spectrograms"
@@ -117,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "28",
    "metadata": {},
    "source": [
     "### Test Spectrogram Output"
@@ -200,11 +328,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = imgs[27]\n",
+    "arr = imgs[2]\n",
     "\n",
     "# If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
     "if np.issubdtype(arr.dtype, np.floating):\n",
@@ -216,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "30",
    "metadata": {},
    "source": [
     "### Download Image Chunks"
@@ -225,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -249,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -257,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -265,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -273,14 +401,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "37",
    "metadata": {},
    "source": [
     "# Make Beat-aligned Chromagrams"
@@ -289,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "39",
    "metadata": {},
    "source": [
     "### Test Raw Chromagram Output (small on purpose)"
@@ -370,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "41",
    "metadata": {},
    "source": [
     "### Visualize Chromagram"
@@ -395,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,12 +551,12 @@
     "               cmap=cmap,\n",
     "               extent=[0, chroma_img.shape[1], 0, y_pixels])\n",
     "    plt.colorbar(label=\"Chroma Energy\")\n",
-    "    plt.xlabel(\"Time (resampled bins)\")\n",
+    "    plt.xlabel(\"Time (interpolated bins)\")\n",
     "    plt.ylabel(\"Pitch Class\")\n",
     "    plt.yticks(np.linspace(0.5, y_pixels - 0.5, 12), \n",
     "               [\"C\", \"C#\", \"D\", \"D#\", \"E\", \"F\", \n",
     "                \"F#\", \"G\", \"G#\", \"A\", \"A#\", \"B\"])\n",
-    "    plt.title(\"Downbeat-Aligned Chromagram\")\n",
+    "    plt.title(\"Chromagram\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
@@ -442,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -450,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -458,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -466,7 +594,348 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import librosa\n",
+    "\n",
+    "def make_fixed_size_spectrogram(y, sr, n_seconds=3.0, width=128, n_mels=128):\n",
+    "    \"\"\"\n",
+    "    Create a fixed-size mel spectrogram image with exactly (n_mels, width) shape.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    y : np.ndarray\n",
+    "        Audio signal.\n",
+    "    sr : int\n",
+    "        Sample rate.\n",
+    "    n_seconds : float\n",
+    "        Duration (in seconds) of each spectrogram window.\n",
+    "    width : int\n",
+    "        Number of time bins (pixels) in the spectrogram.\n",
+    "    n_mels : int\n",
+    "        Number of mel frequency bins.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    specs : list of np.ndarray\n",
+    "        Each spectrogram of shape (n_mels, width).\n",
+    "    \"\"\"\n",
+    "    # Compute hop_length so that n_seconds -> width frames\n",
+    "    hop_length = int(round((n_seconds * sr) / width))\n",
+    "\n",
+    "    # Frame length: usually 2–4× hop length for STFT stability\n",
+    "    n_fft = hop_length * 4\n",
+    "\n",
+    "    # Compute mel spectrogram\n",
+    "    mel = librosa.feature.melspectrogram(y=y, sr=sr,\n",
+    "                                         n_fft=n_fft,\n",
+    "                                         hop_length=hop_length,\n",
+    "                                         n_mels=n_mels)\n",
+    "    mel_db = librosa.power_to_db(mel, ref=np.max)\n",
+    "\n",
+    "    # Segment into non-overlapping windows of size `width`\n",
+    "    specs = []\n",
+    "    for i in range(0, mel_db.shape[1] - width + 1, width):\n",
+    "        window = mel_db[:, i:i + width]\n",
+    "        specs.append(window)\n",
+    "\n",
+    "    return specs\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "# y, sr = librosa.load(\"song.wav\", sr=None)\n",
+    "spectros = make_fixed_size_spectrogram(y, sr, n_seconds=3.0, width=128, n_mels=128)\n",
+    "print(spectros[0].shape)  # (64, 128)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = spectros[30]\n",
+    "\n",
+    "# If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
+    "if np.issubdtype(arr.dtype, np.floating):\n",
+    "    arr = (255 * (arr - arr.min()) / (arr.max() - arr.min())).astype(np.uint8)\n",
+    "\n",
+    "pil_img = Image.fromarray(arr)\n",
+    "pil_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import librosa\n",
+    "\n",
+    "def make_fixed_size_chromagrams(y, sr, n_seconds=3.0, width=128, hop_length=512):\n",
+    "    \"\"\"\n",
+    "    Create fixed-size chromagram images (not beat aligned) using\n",
+    "    a single chromagram computation + interpolation.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    y : np.ndarray\n",
+    "        Audio signal.\n",
+    "    sr : int\n",
+    "        Sampling rate.\n",
+    "    n_seconds : float\n",
+    "        Duration (in seconds) of each window.\n",
+    "    width : int\n",
+    "        Number of chroma frames allocated per window (output width).\n",
+    "    hop_length : int\n",
+    "        Hop length used to compute the base chromagram.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    images : list of np.ndarray\n",
+    "        Each image has shape (12, width).\n",
+    "    \"\"\"\n",
+    "    # Compute base chromagram once\n",
+    "    chroma = librosa.feature.chroma_cqt(y=y, sr=sr, hop_length=hop_length)\n",
+    "\n",
+    "    # Get frame times\n",
+    "    frame_times = librosa.frames_to_time(\n",
+    "        np.arange(chroma.shape[1]), sr=sr, hop_length=hop_length\n",
+    "    )\n",
+    "\n",
+    "    # Window length in frames\n",
+    "    window_length_frames = int(round(n_seconds * sr / hop_length))\n",
+    "\n",
+    "    images = []\n",
+    "    for start in range(0, chroma.shape[1] - window_length_frames + 1, window_length_frames):\n",
+    "        end = start + window_length_frames\n",
+    "        segment = chroma[:, start:end]\n",
+    "\n",
+    "        if segment.shape[1] < 2:\n",
+    "            continue\n",
+    "\n",
+    "        # Resample to fixed width\n",
+    "        x_old = np.linspace(0, 1, segment.shape[1])\n",
+    "        x_new = np.linspace(0, 1, width)\n",
+    "        segment_resampled = np.vstack([\n",
+    "            np.interp(x_new, x_old, row) for row in segment\n",
+    "        ])\n",
+    "\n",
+    "        images.append(segment_resampled)\n",
+    "\n",
+    "    return images\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "# y, sr = librosa.load(\"song.wav\", sr=None)\n",
+    "chromas = make_fixed_size_chromagrams(y, sr, n_seconds=3.0, width=128, hop_length=512)\n",
+    "print(len(chromas), chromas[0].shape)  # -> (N, (12, 128))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_chromagram_image(chromas[3], cmap=\"inferno\", y_pixels=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": []
